Bug 423596 - Windows are not resized in some cases although the window placement is set to maximizing
Summary: Windows are not resized in some cases although the window placement is set to...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: git master
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-06-27 18:40 UTC by Jonah Brüchert
Modified: 2020-07-21 23:41 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jonah Brüchert 2020-06-27 18:40:02 UTC
SUMMARY
In some setups, such as Plasma Mobile, kwin should automatically maximize windows. The following entry in the config file is used for that:

[Windows]
Placement=Maximizing

But in some cases, like when the device is rotated, windows are not being resized. Not every time, but very often when the virtual keyboard is closed by removing focus from the text field that triggered it, the window stays in a size that leaves space for the keyboard although it is closed.

STEPS TO REPRODUCE
1. Have a device that supports rotation
2. Add 

[Windows]
Placement=Maximizing

to /etc/xdg/kwinrc 

4. Open an application
3. rotate the device

OBSERVED RESULT
The window is now partially placed outside of the screen, because it still has the size of the screen before it was rotated.

EXPECTED RESULT
The window is always resized to be maximized.


SOFTWARE/OS VERSIONS
Linux/KDE Plasma: KDE Neon dev unstable.
(available in About System)
KDE Plasma Version: 5.19.80
KDE Frameworks Version: 5.72.0
Qt Version: 5.14.2

ADDITIONAL INFORMATION
Comment 2 Aleix Pol 2020-07-21 12:03:42 UTC
Git commit ef81ae3f9f7d743ab48bdcceda5df38975567f35 by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 21/07/2020 at 12:03.
Pushed by apol into branch 'master'.

Resize maximised windows upon workspace change

Don't issue a frameGeometry update until we have fully processed which
geometry we want.

M  +1    -1    abstract_client.cpp

https://invent.kde.org/plasma/kwin/commit/ef81ae3f9f7d743ab48bdcceda5df38975567f35
Comment 3 Aleix Pol 2020-07-21 23:41:19 UTC
Git commit b3c7d2b3f050e4a8e2c62303e419cac63bbdbc2a by Aleix Pol Gonzalez, on behalf of Aleix Pol.
Committed on 21/07/2020 at 23:41.
Pushed by apol into branch 'Plasma/5.19'.

Resize maximised windows upon workspace change

Don't issue a frameGeometry update until we have fully processed which
geometry we want.


(cherry picked from commit ef81ae3f9f7d743ab48bdcceda5df38975567f35)

M  +1    -1    abstract_client.cpp

https://invent.kde.org/plasma/kwin/commit/b3c7d2b3f050e4a8e2c62303e419cac63bbdbc2a