Resize maximised windows upon workspace change

Don't issue a frameGeometry update until we have fully processed which
geometry we want.

BUG: 423596


(cherry picked from commit ef81ae3f9f7d743ab48bdcceda5df38975567f35)